test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-24 21:48:06.165476

